welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^